--- a/public/index.html
+++ b/public/index.html
@@ -24,5 +24,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://cdn.jsdelivr.net/npm/vue-scrollto"></script>
   </body>
 </html>
