--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,11 @@
     />
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
 
-    <title>Muzn</title>
+    <title>Muzn - مزن</title>
   </head>
   <body class="text-gray-800 antialiased" >
     <noscript>
-      <strong>We're sorry but vuejs-landing-page doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>نعتذر عن هذا الخلل .. سيتم حل المشكل قريبا.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
